--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
 <html>
    <head>
       <meta charset = "utf-8" />
-      <link href = 'https://fonts.googleapis.com/css?family=Play:400,700' 
-         rel = 'stylesheet' type = 'text/css'>
-      <link rel = "stylesheet" href = "assets/css/style.css" type = 'text/css'>
-      <link rel = "stylesheet" href = "src/blockrain.css" type = 'text/css'>
 	  <link rel = "stylesheet" href = "index.css" type = 'text/css'>
    <body>
    	  <section id=navbar> 
@@ -20,14 +16,14 @@
       			</div>
       		</header>
       		<aside class="sidebar-left">
-      			<h id="left">Twitter</h>
+      			<h1 id="sub">Twitter</h1>
       		</aside>
       		<article>
-      			<h id="article">BTC Price</h>
+      			<h2 id="sub">BTC Price</h2>
       		</article>
       		<aside class="sidebar-right">
       			<div class="right-widget">
-	      			<h id="right">Technical Analysis</h>
+	      			<h3 id="sub">Technical Analysis</h3>
 	     				<!-- TradingView Widget BEGIN -->
 						<div class="tradingview-widget-container">
 						  <div class="tradingview-widget-container__widget"></div>
@@ -86,7 +82,7 @@
 				</div>
       		</footer>
       		<below>
-      			<h id = "tetris">Tetris</h>
+      			<h4 id = "sub">Tetris</h4>
       		</below>
       	</div>
       </section>
